<resources>
    <string name="app_name">My Calendar</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="tab_day_calendar">Ngày</string>
    <string name="tab_monh_calendar">Tháng</string>
    <string name="tab_astrology">Tử vi</string>
    <string name="event_in">Event in </string>
    <string name="huong_xuat_hanh">
        - Hỷ Thần Đông Bắc <br />
        - Tài Thần Chính Nam <br />
        - Kê Thần Đông Bắc</string>
    <string name="good_bad_star">
        - SAO TỐT: Thiên Ân, Lục Hợp, Bất Tương, Phổ Hộ, Trừ Thần, Minh Phệ, Bảo Quang <br />
        - SAO XẤU: Đại Thời, Đại Bại, Hàm Trì, Tiểu Hao, Ngũ Hư, Thổ Phù</string>
    <string name="should_do">Tốt cho các việc tạo tác, sửa giếng, thu người làm.</string>
    <string name="should_not_do">Xấu cho các việc xuất nhập vốn liếng, khai kho, an sàng</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="month_year_solar">Tháng 5 - 2021</string>
    <string name="day_solar">18</string>
    <string name="day_of_week">THỨ HAI</string>
    <string name="maxim">Người quan tâm đến tôi, tôi sẽ quan tâm lại gấp bội! - Vô danh</string>
    <string name="time">21:28</string>
    <string name="time_solar">Kỷ Hợi</string>
    <string name="day_lunar">7</string>
    <string name="month_lunar">Tháng 4</string>
    <string name="str_day_lunar">Ng. Bính Dần</string>
    <string name="str_month_lunar">Th. Quý Tỵ</string>
    <string name="str_year_lunar">Năm Tân Sửu</string>
    <string name="tab_more">Mở rộng</string>
    <string name="leap_month">Nhuận</string>
    <string-array name="contentPageAstrology">
        <item>Tử vi 2021</item>
        <item>Tử vi trọn đời</item>
        <item>Giải mộng</item>
        <item>Bói phương Đông</item>
        <item>Xem ngày tốt</item>
        <item>Xem bói</item>
        <item>Cung hoàng đạo</item>
        <item>Phong thủy nhà cửa</item>
        <item>Gieo quẻ</item>
    </string-array>
    <string-array name="contentPageMore">
        <item>Thời tiết</item>
        <item>Văn khấn</item>
        <item>La bàn</item>
        <item>Đổi ngày</item>
        <item>Ý nghĩa ngày lễ</item>
        <item>Sự kiện lịch sử</item>
        <item>Phản hồi</item>
        <item>Chính sách bảo mật</item>
        <item>Đánh giá</item>
        <item>Chia sẻ</item>
    </string-array>
    <string-array name="zodiac_array">
        <item>Bạch Dương</item>
        <item>Kim Ngưu</item>
        <item>Song Tử</item>
        <item>Cự Giải</item>
        <item>Sư Tử</item>
        <item>Xử Nữ</item>
        <item>Thiên Bình</item>
        <item>Bọ cạp</item>
        <item>Nhân Mã</item>
        <item>Ma Kết</item>
        <item>Bảo Bình</item>
        <item>Song Ngư</item>
    </string-array>
    <string-array name="year_picker_array">
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
    </string-array>
    <string-array name="sex_picker_array">
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>
    <string-array name="alphabet_picker_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>G</item>
        <item>H</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>X</item>
    </string-array>
    <string-array name="A">
        <item>Ảnh</item>
        <item>Áo</item>
        <item>Áp lực</item>
        <item>Ăn</item>
        <item>Âm nhạc</item>
        <item>Ẩu đả</item>
    </string-array>
    <string-array name="B">
        <item>Bạc</item>
        <item>Bãi</item>
        <item>Bàn</item>
        <item>Bạn</item>
        <item>Ban công</item>
        <item>Bàn ủi</item>
        <item>Bánh</item>
        <item>Bao</item>
        <item>Báo</item>
        <item>Bảo</item>
        <item>Bão</item>
        <item>Bát</item>
        <item>Bắt</item>
        <item>Bầu</item>
        <item>Bay</item>
        <item>Bầy</item>
        <item>Bè</item>
        <item>Beo</item>
        <item>Bếp</item>
        <item>Bia</item>
        <item>Bị rượt đuổi</item>
        <item>Bích</item>
        <item>Biển</item>
        <item>Biệt ly</item>
        <item>Bị lạc( hoặc mắc kẹt)</item>
        <item>Bị liệt</item>
        <item>Binh</item>
        <item>Bình</item>
        <item>Bịnh</item>
        <item>Bò</item>
        <item>Bỏ</item>
        <item>Bó</item>
        <item>Bọ</item>
        <item>Bồ câu</item>
        <item>Bồ tát</item>
        <item>Bơi</item>
        <item>Bói</item>
        <item>Bú</item>
        <item>Búa</item>
        <item>Bùa</item>
        <item>Bụi</item>
        <item>Bùi nhùi</item>
        <item>Bùn</item>
        <item>Buôn bán</item>
        <item>Buồn</item>
        <item>Buồng</item>
        <item>Bưởi</item>
        <item>Bướm</item>
        <item>Bút</item>
        <item>Bãi tha ma</item>
    </string-array>
    <string-array name="C">
        <item>Cá</item>
        <item>Cà</item>
        <item>Cãi</item>
        <item>Cam</item>
        <item>Cân</item>
        <item>Cánh</item>
        <item>Cạo</item>
        <item>Cào</item>
        <item>Cắt</item>
        <item>Câu</item>
        <item>Cầu</item>
        <item>Cây</item>
        <item>Cấy</item>
        <item>Chải</item>
        <item>Chăn</item>
        <item>Chân</item>
        <item>Cha mẹ</item>
        <item>Chanh</item>
        <item>Cháy</item>
        <item>Chạy</item>
        <item>Chậu</item>
        <item>Chém</item>
        <item>Chén</item>
        <item>Chết</item>
        <item>Chiếu</item>
        <item>Chim</item>
        <item>Chó</item>
        <item>Chợ</item>
        <item>Chơi</item>
        <item>Chớp</item>
        <item>Chổi</item>
        <item>Chồng vợ</item>
        <item>Chôn</item>
        <item>Chồn</item>
        <item>Chột</item>
        <item>Chủ</item>
        <item>Chùa</item>
        <item>Chuối</item>
        <item>Chuỗi</item>
        <item>Chuồn</item>
        <item>Chuồn chuồn</item>
        <item>Chuông</item>
        <item>Chuột</item>
        <item>Chữ thập</item>
        <item>Cò</item>
        <item>Cỏ</item>
        <item>Cổ</item>
        <item>Cờ</item>
        <item>Cóc</item>
        <item>Cối</item>
        <item>Công</item>
        <item>Cờ-Bài</item>
        <item>Cổng</item>
        <item>Chim cú</item>
        <item>Cù lao</item>
        <item>Củ</item>
        <item>Cua</item>
        <item>Cúc</item>
        <item>Củi</item>
        <item>Cùm</item>
        <item>Cung</item>
        <item>Cửa</item>
        <item>Cười</item>
        <item>Cưới</item>
        <item>Cương</item>
        <item>Cưỡng</item>
        <item>Cướp</item>
    </string-array>
    <string-array name="D">
        <item>Đám ma</item>
        <item>Đánh bạc</item>
        <item>Đánh nhau</item>
        <item>Dạ lý</item>
        <item>Dao</item>
        <item>Dâu rể hôn sự</item>
        <item>Dâu</item>
        <item>Dầu</item>
        <item>Dây</item>
        <item>Dép</item>
        <item>Dê</item>
        <item>Dế</item>
        <item>Di chúc</item>
        <item>Dĩa</item>
        <item>Dơi</item>
        <item>Dời</item>
        <item>Dối trá</item>
        <item>Du</item>
        <item>Dù</item>
        <item>Dưa</item>
        <item>Đá</item>
        <item>Đám</item>
        <item>Đánh</item>
        <item>Đàn</item>
        <item>Đàn bà</item>
        <item>Đàn ông</item>
        <item>Đào</item>
        <item>Đấm</item>
        <item>Đất</item>
        <item>Đầu</item>
        <item>Đậu</item>
        <item>Đẩu</item>
        <item>Đầy</item>
        <item>Đe</item>
        <item>Đè</item>
        <item>Đẻ</item>
        <item>Đèn</item>
        <item>Đẽn</item>
        <item>Đèo</item>
        <item>Đẽo</item>
        <item>Đêm</item>
        <item>Đền, chùa, đình, miếu, nhà</item>
        <item>Đi</item>
        <item>Đỉa</item>
        <item>Địa</item>
        <item>Điếm</item>
        <item>Điên</item>
        <item>Điện</item>
        <item>Đinh</item>
        <item>Đò</item>
        <item>Đỏ</item>
        <item>Đói</item>
        <item>Đóm</item>
        <item>Độc</item>
        <item>Đồn</item>
        <item>Đồng</item>
        <item>Động</item>
        <item>Đu</item>
        <item>Đứa trẻ</item>
        <item>Đũa</item>
        <item>Đuốc</item>
        <item>Đuối</item>
        <item>Đuổi</item>
        <item>Đường</item>
    </string-array>
    <string-array name="E">
        <item>Éc</item>
        <item>Ẹc</item>
        <item>Én</item>
        <item>Ếch</item>
    </string-array>
    <string-array name="G">
        <item>Ga</item>
        <item>Gà</item>
        <item>Gác</item>
        <item>Gai</item>
        <item>Gái</item>
        <item>Gãi đầu</item>
        <item>Gáy</item>
        <item>Gạo</item>
        <item>Gặt</item>
        <item>Gấm</item>
        <item>Gấu</item>
        <item>Gậy</item>
        <item>Ghen</item>
        <item>Ghẹo</item>
        <item>Ghế</item>
        <item>Ghim</item>
        <item>Gia</item>
        <item>Gia</item>
        <item>Gia tài</item>
        <item>Giá</item>
        <item>Già</item>
        <item>Giam</item>
        <item>Gián</item>
        <item>Giao</item>
        <item>Giáo</item>
        <item>Giáp</item>
        <item>Giày</item>
        <item>Giặc</item>
        <item>Giặt</item>
        <item>Giấm</item>
        <item>Giấy</item>
        <item>Gieo</item>
        <item>Giếng</item>
        <item>Giết</item>
        <item>Gió</item>
        <item>Giường</item>
        <item>Gốc</item>
        <item>Gối</item>
        <item>Gội</item>
        <item>Gỗ</item>
        <item>Gông</item>
        <item>Guốc</item>
        <item>Gươm</item>
        <item>Gương</item>
    </string-array>
    <string-array name="H">
        <item>Hạc</item>
        <item>Hang</item>
        <item>Hàng</item>
        <item>Hành</item>
        <item>Hạnh</item>
        <item>Hào</item>
        <item>Hầm</item>
        <item>Hấp</item>
        <item>Hẹn</item>
        <item>Heo</item>
        <item>Hoa</item>
        <item>Hòa</item>
        <item>Họa</item>
        <item>Hoàng</item>
        <item>Hỏi</item>
        <item>Hòm</item>
        <item>Hố</item>
        <item>Hồ</item>
        <item>Hổ</item>
        <item>Hội</item>
        <item>Hôn</item>
        <item>Hồng</item>
        <item>Hộp</item>
        <item>Hơi</item>
        <item>Huệ</item>
        <item>Huy</item>
        <item>Hương</item>
        <item>Hươu</item>
    </string-array>
</resources>