<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_day_detail"
    tools:context=".fragment.DayDetailFragment"
    android:clickable="true"
    android:focusable="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMonthYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corner"
                android:text="Tháng 5 - 2021"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title_in_detail_day"
                android:gravity="center" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corner"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="@dimen/margin_top">
                <Button
                    android:id="@+id/nextMonth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/back"
                    android:background="@null"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size"/>

                <TextView
                    android:id="@+id/monthYearTV"
                    android:layout_width="0dp"
                    android:layout_weight="2.6"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Thứ tư, 19-05-2021"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/previousMonth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/forward"
                    android:background="@null"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:text="LỊCH ÂM"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title_in_detail_day"
                android:layout_gravity="center"></TextView>
            <TableLayout
                android:background="#55FFFFFF"
                android:id="@+id/tableLayout"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:stretchColumns="0,1,2">
                <TableRow
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="NGÀY"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_content_in_detail_day"></TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="THÁNG"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_content_in_detail_day"></TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="NĂM"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_content_in_detail_day"></TextView>
                </TableRow>
                <TableRow
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="8"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_content_in_detail_day"></TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="4"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_content_in_detail_day"></TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="2021"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_content_in_detail_day"></TextView>
                </TableRow>
                <TableRow
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Đinh Mão"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_content_in_detail_day"></TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Quý Tỵ"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_content_in_detail_day"></TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Tân Sửu"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_content_in_detail_day"></TextView>
                </TableRow>
            </TableLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginTop="@dimen/margin_top"
                android:text="SỰ KIỆN"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title_in_detail_day"
                android:layout_gravity="center"></TextView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/eventRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginTop="@dimen/margin_top"
                android:text="GIỜ HOÀNG ĐẠO"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title_in_detail_day"
                android:layout_gravity="center"></TextView>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/GoodTimeRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"/>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:text="HƯỚNG XUẤT HÀNH"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title_in_detail_day"
                android:layout_gravity="center"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginTop="@dimen/margin_top"
                android:text="- Hỷ Thần Đông Bắc \n- Tài Thần Chính Nam \n- Kê Thần Đông Bắc"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_content_in_detail_day"
                android:layout_gravity="center"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:text="SAO TỐT - SAO XẤU"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title_in_detail_day"
                android:layout_gravity="center"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginTop="@dimen/margin_top"
                android:text="- SAO TỐT: Thiên Ân, Lục Hợp, Bất Tương, Phổ Hộ, Trừ Thần, Minh Phệ, Bảo Quang \n- SAO XẤU: Đại Thời, Đại Bại, Hàm Trì, Tiểu Hao, Ngũ Hư, Thổ Phù"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_content_in_detail_day"
                android:layout_gravity="center"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginTop="@dimen/margin_top"
                android:text="VIỆC NÊN LÀM"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title_in_detail_day"
                android:layout_gravity="center"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/should_do"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_content_in_detail_day"
                android:layout_gravity="center"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:text="VIỆC KHÔNG NÊN LÀM"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title_in_detail_day"
                android:layout_gravity="center"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/should_not_do"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_content_in_detail_day"
                android:layout_gravity="center"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:text="TUỔI XUNG"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title_in_detail_day"
                android:layout_gravity="center"></TextView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ConflictAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>